# hw2-tabular-solution

./: SOLUTION.md  pyproject.toml  run_all.py
hw2/: __init__.py
hw2/algo/: __init__.py  mc.py  q.py  sarsa.py
hw2/utils/: render.py
scripts/: 1.train_policies.py  2.plot_eval_returns.py  3.plot_policy_and_vf.py
tests/: test_implementation.py
