[project]
name = "hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Mikihisa Yuasa", email = "mik0915yua@outlook.com" }]
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pytest>=8.4.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[project.scripts]
hw2 = "scripts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["hw2"]
